# friday-operator-suite

./: .env.example  .gitignore  FRIDAY_CHEAT_SHEET.md  README.md  agent_friday.py  local_friday.py  pyproject.toml  run-friday-app.ps1  run-friday.ps1  server.py
desktop-app/: launch-electron.cjs  main.cjs  package-lock.json  package.json  preload.cjs  renderer.css  renderer.html  renderer.js  run-friday-app.ps1
friday/: local_voice.py  speech.py
friday/tools/: __init__.py  browser.py  desktop.py  macros.py  office.py  shorts.py  system.py  utils.py  web.py  workflows.py
